--- a/.github/workflows/cache-action-demo.yml
+++ b/.github/workflows/cache-action-demo.yml
@@ -18,6 +18,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    needs: install-dependencies
     steps:
       - name: chechout source
         uses: actions/checkout@v4
