--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "terrible-lodash": "^0.0.3",
+    "vue-compment": "^0.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
